--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body {
     width: 300px;
     height: 46px;
     border: 1px solid black;
+    outline: none;
     font-size: 25px;
     vertical-align: middle;
 }
